--- a/pass_1a/rnaseq_gene_data_qc_analysis.Rmd
+++ b/pass_1a/rnaseq_gene_data_qc_analysis.Rmd
@@ -80,7 +80,7 @@ rownames(merged_dmaqc_data) = as.character(merged_dmaqc_data$viallabel)
 merged_dmaqc_data$tissue = merged_dmaqc_data$sampletypedescription
 ```
 
-# PCA plots (all samples)
+# Data preprocessing and QC
 
 We tested two simple ways to normalize the count data: (1) FPKM, and (2) factor normalized counts with and without variance stabilizing transformations (to accound for gene dispersion). 
 
@@ -222,8 +222,6 @@ ggplot(df,aes(x=PC1, y=PC2,shape=site, color=tissue)) +
   theme(plot.title = element_text(hjust = 0.5))
 ```
 
-# Within tissue analysis
-
 ## Correlation between PCs and non-RNA variables
 
 Here we take each tissue and analyze its samples. We quantile normalize the data and run PCA. For the top principal components (5) we compute their association with the RNA-seq qc scores or information collected about the rats. For the latter we use sex, weight, achieved distances, and shock time during the experiment. Note that all of these scores are highly correlated. Below we perform a simple Spearman correlation-based analysis. We can later recompute the associations after proper adjustments.
@@ -311,7 +309,8 @@ write.table(qc_scores_results,sep="\t",quote=F,row.names = F)
 write.table(animal_data_results,sep="\t",quote=F,row.names = F)
 ```
 
-## Differential abundance analysis using FPKM data
+
+# Differential abundance analysis (FPKM)
 
 In this analysis we use simple linear regression to model the log fold changes. Here we perfom a simple analysis excluding the control groups (sampled in two time points only). Assume that we are analyzing a specific gene with a gene expression pattern $x$ in a given tissue. We use the following covatiates in the model: (1) $y_{sex}$ - sex, (2) $lt_i$ - time, linear trend, (3) $qt_i$ - time, quadratic trend, (4) $y_d$ - distance acheived by the rat during the acute test, and (5) $Z$ - technical variables. That is: 
 $$x_i = \beta_0 + \beta_{sex}*y_{sex}+\beta_l*lt_i + \beta_q*qt_i + \beta_d*y_d + \bf{\beta_z^TZ_{i,*}}$$.
@@ -324,7 +323,8 @@ source("/Users/David/Desktop/repos/motrpac/tools/association_analysis_functions.
 Z_cols = c("pct_multimapped","pct_umi_dup",
            "median_5_3_bias","pct_rRNA","Lib_batch_ID")
 clinical_cols = c("animal.registration.sex","animal.key.timepoint",
-                  "animal.key.is_control","acute.test.distance")
+                  "animal.key.is_control","acute.test.distance",
+                  "acute.test.weight")
 tissue2diff_analysis_results = list()
 rnaseq_meta_batchs = unique(rnaseq_meta[,c("GET_site","Tissue")])
 for(i in 1:nrow(rnaseq_meta_batchs)){
@@ -405,14 +405,11 @@ system(paste("~/google-cloud-sdk/bin/gsutil",
              "cp tissue2diff_analysis_results_simple_univariate.RData",
              "gs://bic_data_analysis/pass1a/rnaseq/"))
 
-# Add simple Kruskal Wallis
-
-
 ```
 
 We next inspect the results of the analysis. At a first step, we inspect the p-value distributions of the time-associated differential analysis.
 
-```{r,fig.align="center",out.height='40%',out.width='40%',message=FALSE,warning=FALSE}
+```{r,fig.align="center",out.height='50%',out.width='80%',message=FALSE,warning=FALSE}
 # load precomputed results
 system(paste("~/google-cloud-sdk/bin/gsutil", 
              "cp gs://bic_data_analysis/pass1a/rnaseq/tissue2diff_analysis_results.RData",
@@ -444,9 +441,82 @@ for(curr_name in names(tissue2diff_analysis_results)){
 
 ```
 
+## Simple F- or t-test analysis
+
+## T-tests and mediation analysis for sex vs weight
+
+```{r,fig.align="center",out.height='40%',out.width='40%',message=FALSE,warning=FALSE}
+library(mediation)
+
+run_sex_weight_mediation<-function(x,s,w){
+  m1 = lm(w~s)
+  m2 = lm(x~s+w)
+  med.out = mediate(m1,m2,treat="s",mediator="w",boot=T,
+                    robustSE = TRUE, sims = 100)
+  # sens.out <- medsens(med.out, 
+  #                     rho.by = 0.1, effect.type = "indirect", sims = 100)
+  # summary(sens.out)
+  
+  med.out = summary(med.out)
+  med.out[c("d0.p","d1.p")]
+  res = unlist(med.out[c("d0","d0.p","z0","z0.p","n0")])
+  names(res) = c("med_effect","med_effect_pvalue",
+                 "direct_effec","direct_effect_pvalue",
+                 "prop_mediated")
+  return(res)
+}
+
+t_tests_results = list()
+mediation_results = list()
+for(i in 1:nrow(rnaseq_meta_batchs)){
+  curr_site = rnaseq_meta_batchs[i,1]
+  curr_tissue = rnaseq_meta_batchs[i,2]
+  curr_samples = as.character(
+    rnaseq_meta$vial_label[rnaseq_meta$GET_site==curr_site &
+                           rnaseq_meta$Tissue==curr_tissue])
+  # For rat data, take samples whose label id starts with "9"
+  curr_samples = curr_samples[grepl("^9",curr_samples)]
+  curr_data = process_fpkm1(fpkm_all[,curr_samples])
+  curr_data = run_quantile_normalization(curr_data)
+  curr_data = as.matrix(curr_data)
+  curr_meta2 = merged_dmaqc_data[curr_samples,clinical_cols]
+  y = curr_meta2$animal.key.timepoint
+  z = curr_meta2$animal.key.is_control
+  
+  controls_data = curr_data[,z & y==min(y)]
+  mean_control = rowMeans(controls_data)
+  curr_data = curr_data[,!z]
+  y = y[!z]
+  
+  for(tp in unique(y)){
+    x = curr_data[,y==tp]
+    x_ttest = cbind(x,controls_data)
+    g = curr_meta2[colnames(x_ttest),]$animal.key.is_control
+    ttest_res = t(apply(x_ttest,1,compare_two_groups,y = g))
+    fchange = ttest_res[,1]-ttest_res[,2]
+    hist(ttest_res[,3])
+    ttest_res = cbind(ttest_res,fchange)
+    # prepare data for the mediation analysis
+    for(j in 1:ncol(x)){x[,j] = x[,j]-mean_control}
+    s = curr_meta2[colnames(x),]$animal.registration.sex
+    w = curr_meta2[colnames(x),]$acute.test.weight
+    # select rows for the medition analysis
+    inds = abs(fchange) > 0.25 & ttest_res[,3] < 0.01
+    print(table(inds))
+    mediation_analysis_res = apply(x[inds,],1,run_sex_weight_mediation,s=s,w=w)
+    mediation_analysis_res = t(mediation_analysis_res)
+    
+    curr_name = paste(curr_tissue,curr_site,sep=",")
+    t_tests_results[[curr_name]] = ttest_res
+    mediation_results[[curr_name]] = mediation_analysis_res
+  }
+  
+}
+```
+
+\pagebreak
 
 # Site comparison using the Gastrocnemius samples
-
 ## Simple comparison of the differential analysis results
 
 As a first, simple analysis we load the differential analysis results and compare Stanford and Sinai.
@@ -478,6 +548,8 @@ Finally, compare the genes by looking at their p-values.
 res_stanford = res_stanford[shared_genes,]
 res_mssm = res_mssm[shared_genes,]
 par(mfrow=c(1,2))
+rho_linear = cor(-log(res_stanford[,"pval;time.linear"],10),
+                 -log(res_mssm[,"pval;time.linear"],10))
 plot(x = -log(res_stanford[,"pval;time.linear"],10),
      y = -log(res_mssm[,"pval;time.linear"],10),
      xlab="Stanford",ylab="Sinai",pch=20,cex=0.5,
@@ -607,7 +679,9 @@ Gastrocnemius_fpkm_pcax = Gastrocnemius_fpkm_pca$x
 df = data.frame(Gastrocnemius_fpkm_pcax[,1:10],
                 shape=Gastrocnemius_metadata$site, site=Gastrocnemius_metadata$site,
                 sample = sample_id[rownames(Gastrocnemius_fpkm_pcax)],
-                sex = as.factor(animal_metadata[Gastrocnemius_metadata$PID,"sex"]))
+                sex = as.factor(
+                  merged_dmaqc_data[rownames(Gastrocnemius_metadata),"animal.registration.sex"]
+                ))
 df = df[order(df$sample),]
 # Add lines between matching samples (i.e., same sample, different site)
 ggplot(df,aes(x=PC1, y=PC2, shape=sex, color=site,group=sample)) +
@@ -621,7 +695,9 @@ Gastrocnemius_fpkm_pcax = Gastrocnemius_fpkm_pca$x
 df = data.frame(Gastrocnemius_fpkm_pcax[,1:10],
                 shape=Gastrocnemius_metadata$site, site=Gastrocnemius_metadata$site,
                 sample = sample_id[rownames(Gastrocnemius_fpkm_pcax)],
-                sex = as.factor(animal_metadata[Gastrocnemius_metadata$PID,"sex"]))
+                sex = as.factor(
+                  merged_dmaqc_data[rownames(Gastrocnemius_metadata),"animal.registration.sex"]
+                ))
 df = df[order(df$sample),]
 # Add lines between matching samples (i.e., same sample, different site)
 ggplot(df,aes(x=PC1, y=PC2, shape=sex, color=site,group=sample)) +
@@ -635,7 +711,7 @@ ggplot(df,aes(x=PC3, y=PC4, shape=sex, color=site,group=sample)) +
 
 ```
 
-## Look at the sample correlation
+## Sample correlation
 
 We next compute the Spearman correlation between the samples (with and without filterling lowly expressed genes). We separate the correlations to those between different samples and those between cross-site replicates.
 
@@ -668,20 +744,6 @@ boxplot(l,col=c("gray","green"),
         cex.main=0.9)
 
 ```
-
-# In progress
-Looking at qc scores correlation (assay specific), for example for RNA-seq:
-
-```{r, fig.align="center",out.height='40%',out.width='40%'}
-library(corrplot)
-cols_for_qc_analysis = c("RIN","reads","pct_GC","pct_rRNA","pct_globin",
-                      "pct_umi_dup","median_5_3_bias","pct_trimmed_bases",
-                      "pct_multimapped")
-x = rnaseq_meta[rnaseq_meta$site=="stanford",cols_for_qc_analysis]
-corrplot(cor(x,method="spearman"),tl.cex = 0.8,type = "upper", main="Stanford, selected scores (spearman)",cex.main=0.8,mar=c(3,3,3,3))
-x = rnaseq_meta[rnaseq_meta$site=="sinai",cols_for_qc_analysis]
-corrplot(cor(x,method="spearman"),tl.cex = 0.8,type = "upper", main="Sinai, selected scores (spearman)",cex.main=0.8,mar=c(3,3,3,3))
-
 
 
 
