--- a/pass_1a/rnaseq_gene_data_qc_analysis.Rmd
+++ b/pass_1a/rnaseq_gene_data_qc_analysis.Rmd
@@ -25,6 +25,7 @@ library(corrplot)
 source("~/Desktop/repos/motrpac/tools/preprocessing_helper_functions.R")
 source("~/Desktop/repos/motrpac/tools/association_analysis_functions.R")
 source("~/Desktop/repos/motrpac/tools/gcp_functions.R")
+source("~/Desktop/repos/motrpac/tools/enrichment_analysis_methods.R")
 
 # Data paths
 site2fpkm_path = list(
@@ -313,7 +314,8 @@ write.table(animal_data_results,sep="\t",quote=F,row.names = F)
 
 # Differential abundance analysis (FPKM)
 
-```{r}
+## Using linear models
+```{r,eval=FALSE}
 # Prepare the data for the analysis
 Z_cols = c("pct_multimapped","pct_umi_dup",
            "median_5_3_bias","pct_rRNA","Lib_batch_ID")
@@ -351,7 +353,7 @@ $$x_i = \beta_0 + \beta_{sex}*y_{sex}+\beta_l*lt_i + \beta_q*qt_i + \beta_d*y_d 
 
 Here is the code for this analysis:
 
-```{r,fig.align="center",out.height='50%',out.width='50%',message=FALSE,warning=FALSE,eval=FALSE}
+```{r,fig.align="center",message=FALSE,warning=FALSE,eval=FALSE}
 # store all betas and their p-values
 tissue2diff_analysis_results = list()
 for(curr_name in names(rnaseq_data_for_difftests)){
@@ -414,39 +416,10 @@ system(paste("~/google-cloud-sdk/bin/gsutil",
 
 ```
 
-We next inspect the results of the analysis. At a first step, we inspect the p-value distributions of the time-associated differential analysis.
-
-```{r,fig.align="center",out.height='50%',out.width='80%',message=FALSE,warning=FALSE}
-# load precomputed results
-print("number of analyzed genes in each tissue:")
-print(sapply(tissue2diff_analysis_results,function(x)dim(x[[1]])))
-par(mfrow=c(1,3))
-for(curr_name in names(tissue2diff_analysis_results)){
-  lm_results = tissue2diff_analysis_results[[curr_name]][[1]]
-  distance_col = grepl("distance",colnames(lm_results)) &
-    grepl("pval",colnames(lm_results))
-  sex_col = grepl("sex",colnames(lm_results)) &
-    grepl("pval",colnames(lm_results))
-  time_col = grepl("time.q",colnames(lm_results)) &
-    grepl("pval",colnames(lm_results))
-  hist(lm_results[,time_col],
-       main=paste(curr_name,"linear trend"),xlab="P-value",
-       cex.main=1)
-  hist(lm_results[,distance_col],
-       main=paste(curr_name,"distance"),xlab="P-value",
-       cex.main = 1)
-  hist(lm_results[,sex_col],
-       main=paste(curr_name,"sex"),xlab="P-value",
-       cex.main = 1)
-}
-
-```
-
 ## T-tests and mediation analysis for sex vs weight
 
-```{r,fig.align="center",out.height='40%',out.width='40%',message=FALSE,warning=FALSE}
+```{r,fig.align="center",out.height='40%',out.width='40%',eval=FALSE,warning=FALSE}
 library(mediation)
-
 run_sex_weight_mediation<-function(x,s,w){
   m1 = lm(w~s)
   m2 = lm(x~s+w)
@@ -485,23 +458,23 @@ for(curr_name in names(rnaseq_data_for_difftests)){
     fchange = ttest_res[,1]-ttest_res[,2]
     hist(ttest_res[,3])
     ttest_res = cbind(ttest_res,fchange)
-    # prepare data for the mediation analysis
-    for(j in 1:ncol(x)){x[,j] = x[,j]-mean_control}
-    s = curr_meta2[colnames(x),]$animal.registration.sex
-    w = curr_meta2[colnames(x),]$acute.test.weight
-    # select rows for the medition analysis
-    inds = abs(fchange) > 0.25 & ttest_res[,3] < 0.01
-    print(table(inds))
-    mediation_analysis_res = apply(x[inds,],1,run_sex_weight_mediation,s=s,w=w)
-    mediation_analysis_res = t(mediation_analysis_res)
+    colnames(ttest_res) = c("mean1","mean2","p","fchange")
     
-    curr_name = paste(curr_tissue,curr_site,tp,sep=",")
-    t_tests_results[[curr_name]] = ttest_res
-    mediation_results[[curr_name]] = mediation_analysis_res
-  }
-  
-}
+    # # prepare data for the mediation analysis
+    # for(j in 1:ncol(x)){x[,j] = x[,j]-mean_control}
+    # s = curr_meta2[colnames(x),]$animal.registration.sex
+    # w = curr_meta2[colnames(x),]$acute.test.weight
+    # # select rows for the medition analysis
+    # inds = abs(fchange) > 0.25 & ttest_res[,3] < 0.01
+    # print(table(inds))
+    # # mediation_analysis_res = apply(x[inds,],1,run_sex_weight_mediation,s=s,w=w)
+    # # mediation_analysis_res = t(mediation_analysis_res)
 
+    curr_entry_name = paste(curr_name,tp,sep=",")
+    t_tests_results[[curr_entry_name]] = ttest_res
+    # mediation_results[[curr_entry_name]] = mediation_analysis_res
+  }
+}
 save(t_tests_results,mediation_results,
        file="tissue2diff_ttest_and_mediation.RData")
 system(paste("~/google-cloud-sdk/bin/gsutil", 
@@ -510,27 +483,112 @@ system(paste("~/google-cloud-sdk/bin/gsutil",
 
 ```
 
+## QC plots
+
+We next inspect the results of the analysis. At a first step, we inspect the p-value distributions of the time-associated differential analysis.
+
+```{r,fig.align="center",out.height='50%',out.width='80%',message=FALSE,warning=FALSE}
+# load precomputed data and results
+tissue2diff_analysis_results = load_from_bucket(
+  "tissue2diff_analysis_results.RData",
+  "gs://bic_data_analysis/pass1a/rnaseq/"
+)[[1]]
+one_way_results = load_from_bucket(
+  "tissue2diff_analysis_results_simple_univariate.RData",
+  "gs://bic_data_analysis/pass1a/rnaseq/"
+)
+tissue2diff_analysis_results_anova = one_way_results[[
+  "tissue2diff_analysis_results_anova"
+]]
+tissue2diff_analysis_results_kw = one_way_results[[
+  "tissue2diff_analysis_results_kw"
+]]
+rnaseq_data_for_difftests = load_from_bucket(
+  "rnaseq_data_for_difftests.RData",
+  "gs://bic_data_analysis/pass1a/rnaseq/"
+)[[1]]
+pairwise_tests_results = load_from_bucket(
+  "tissue2diff_ttest_and_mediation.RData",
+  "gs://bic_data_analysis/pass1a/rnaseq/"
+)
+t_tests_results = pairwise_tests_results[["t_tests_results"]]
+mediation_results = pairwise_tests_results[["mediation_results"]]
+
+# Plot p-values
+print("number of analyzed genes in each tissue:")
+print(sapply(tissue2diff_analysis_results,function(x)dim(x[[1]])))
+par(mfrow=c(1,3))
+for(curr_name in names(tissue2diff_analysis_results)){
+  lm_results = tissue2diff_analysis_results[[curr_name]][[1]]
+  distance_col = grepl("distance",colnames(lm_results)) &
+    grepl("pval",colnames(lm_results))
+  sex_col = grepl("sex",colnames(lm_results)) &
+    grepl("pval",colnames(lm_results))
+  time_col = grepl("time.q",colnames(lm_results)) &
+    grepl("pval",colnames(lm_results))
+  hist(lm_results[,time_col],
+       main=paste(curr_name,"linear trend"),xlab="P-value",
+       cex.main=1)
+  hist(lm_results[,distance_col],
+       main=paste(curr_name,"distance"),xlab="P-value",
+       cex.main = 1)
+  hist(lm_results[,sex_col],
+       main=paste(curr_name,"sex"),xlab="P-value",
+       cex.main = 1)
+}
+
+```
+
+## T-test results: analysis
+
+Here we use empirical Bayes methods to quantify the number of differential genes in each analysis.
+
+```{r,fig.align="center",out.height='50%',out.width='80%',message=FALSE,warning=FALSE}
+all_ttest_pvals = lapply(t_tests_results,function(x)x[,3])
+all_ttest_fcs = lapply(t_tests_results,function(x)x[,4])
+
+merge_matrix<-function(l,missing_val = 1){
+  objs = unique(unname(unlist(sapply(l,names))))
+  m = matrix(missing_val,nrow=length(objs),ncol=length(l),
+             dimnames = list(objs,names(l)))
+  for(j in 1:length(l)){
+    v = l[[j]]
+    m[names(v),j] = v
+  }
+  return(m)
+}
+
+all_ttest_pvals = merge_matrix(all_ttest_pvals)
+all_ttest_fcs = merge_matrix(all_ttest_fcs,0)
+corrplot(cor(all_ttest_pvals),tl.cex = 0.5)
+corrplot(cor(all_ttest_fcs),tl.cex = 0.5,order="hclust")
+
+```
+
+We next extract the fold change and p-value matrices and compare the tissues, with and without network propagation.
+
 ## Enrichment analysis and interpretation
 
 ```{r}
 library(org.Rn.eg.db)
-res = t_tests_results$`gastrocnemius,Stanford,4`
+res = t_tests_results$
 geneset = rownames(res)[p.adjust(res[,3])<0.1]
-topgo_res = run_topgo_enrichment_fisher(geneset,rownames(res),mapping = "org.Rn.eg.db",ID="ensembl")
+topgo_res = run_topgo_enrichment_fisher(geneset,rownames(res),
+    mapping = "org.Rn.eg.db",ID="ensembl")
 extract_top_go_results(topgo_res,qval = 0.01,maxsize = 200)
 
-med_res = mediation_results$`gastrocnemius,MSSM,4`
-colnames(med_res)
-weight_assoc_genes = p.adjust(med_res[,2])<0.001
-sex_assoc_genes = p.adjust(med_res[,7])<0.001
-table(weight_assoc_genes,sex_assoc_genes)
-table(weight_assoc_genes)
-fisher.test(table(weight_assoc_genes,sex_assoc_genes))$p.value
-
-geneset = rownames(med_res)[weight_assoc_genes]
-topgo_res = run_topgo_enrichment_fisher(
-  geneset,rownames(res),mapping = "org.Rn.eg.db",ID="ensembl")
-extract_top_go_results(topgo_res,qval = 0.1,maxsize = 2000)
+# med_res = mediation_results$`gastrocnemius,MSSM,4`
+# colnames(med_res)
+# weight_assoc_genes = p.adjust(med_res[,2])<0.001
+# sex_assoc_genes = p.adjust(med_res[,7])<0.001
+# table(weight_assoc_genes,sex_assoc_genes)
+# table(weight_assoc_genes)
+# fisher.test(table(weight_assoc_genes,sex_assoc_genes))$p.value
+# 
+# geneset = rownames(med_res)[weight_assoc_genes]
+# topgo_res = run_topgo_enrichment_fisher(
+#   geneset,rownames(res),mapping = "org.Rn.eg.db",ID="ensembl")
+# extract_top_go_results(topgo_res,qval = 0.1,maxsize = 2000)
 
 
 ```
